PDF Preview fix

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -9,7 +9,8 @@
 			<div class="dialog">
 				<div class="close" ng-click="hideDocumentPreview()">×</div>
 				<div ng-class="{top:true, ocr:OCRView}">
-					<img id="image" ng-if="!documentPreviewLoading && !OCRView" class="preview" ng-src="{{documentPreviewURL}}" alt="">
+					<canvas id="pdf-canvas" ng-if="pdfView && !OCRView"></canvas>
+					<img id="image" ng-if="!pdfView && !documentPreviewLoading && !OCRView" class="preview" ng-src="{{documentPreviewURL}}" alt="">
 					<div ng-if="documentPreviewLoading && !OCRView" style="display: flex;background-color: #e5eff1;align-items: center; padding: 10px;">
 						<img src="/assets/images/loading.gif" style="margin-right: 20px;height:40px; width:40px;" alt="">
 						Please wait image is loading...
@@ -23,20 +24,20 @@
 						</div>
 					</div>
 				</div>
-				<div class="bottom" ng-if="!canEnableOCR">
+				<div class="bottom" style="max-width:300px;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;" ng-if="!canEnableOCR">
 					{{viewingDocument.documentName}}
 				</div>
 				<div class="bottom ocr" ng-if="canEnableOCR">
 					<div ng-if="viewingDocument.OCR" class="buttons">
 						<div ng-class='{"preview-btn":true, "active":!OCRView}' ng-click="closeOCRView()">
-							<img ng-if="!documentPreviewLoading" ng-src="{{documentPreviewURL}}" alt="Preview">
+							<img ng-if="!documentPreviewLoading && !pdfView" ng-src="{{documentPreviewURL}}" style="overflow:hidden;" alt="Preview">
 						</div>
 						<div ng-class='{"ocr-btn":true, "active":OCRView}' ng-click="showOCRView()" ng-if="viewingDocument.OCR.length">
 							<img src="/assets/images/ocrsearch.png" alt="">
 							<div style="position: absolute; top:32px; left:32px;font-size: 10px;">OCR</div>
 						</div>						
 					</div>
-					<div style="font-size: 14px;" class="mo-hide">
+					<div style="font-size: 14px;max-width:300px;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;" class="mo-hide">
 						{{viewingDocument.documentName}}					
 					</div>
 					<div class="mochange">
