--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -290,7 +290,7 @@
                     <span ng-show="vm.getActiveStep()>1">Accept</span>
                 </md-button>
                 <md-button class="md-raised md-success" ng-click="vm.submitApplication('APPROVED')" ng-show="vm.getActiveStep()==1 && vm.allVerified">
-                    <div>Approve{{vm.getActiveStep()==1}}{{!vm.allVerified}}{{vm.getActiveStep()==1 && !vm.allVerified}}</div>
+                    <div>Approve</div>
                 </md-button>
                 <md-button class="md-raised md-warn" ng-click="vm.submitApplication('REJECT')" ng-show="vm.getActiveStep()==1 && vm.allVerified">
                     <div>Reject</div>
