--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -364,7 +364,7 @@ md-event-calendar {
 		margin-left: 10px;
 	}
 	.pending-btn {
-		padding: 5px 0;
+		padding: 5px 5px;
 		text-transform: uppercase;
 		border: 1px solid #57c3ea;
 		color: #57c3ea;
@@ -535,7 +535,7 @@ md-event-calendar {
 		margin-top: 15px;
 		.actnItem {
 			outline: none;
-			margin: 20px;
+			margin: 12px;
 			cursor: pointer;
 		}
 		.header {
