--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -99,7 +99,7 @@ table {
 }
 
 .pending-btn {
-  padding: 5px 0;
+  padding: 5px 5px;
   text-transform: uppercase;
   border: 1px solid #57c3ea;
   color: #57c3ea;
