--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -143,6 +143,7 @@ md-event-calendar {
 	}
 	.rightSide {
 		.message-container {
+			overflow-y: scrolll;
 			padding: 10px;	
 			.message-requests {
 				border-radius: 5px;
