--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -143,7 +143,7 @@ md-event-calendar {
 	}
 	.rightSide {
 		.message-container {
-			overflow-y: scrolll;
+			overflow-y: scroll;
 			padding: 10px;	
 			.message-requests {
 				border-radius: 5px;
