fixed right bar bug close #11

--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -41,7 +41,7 @@
 .right-stat {
     .bgimage {
 		width:250px;
-		min-height:calc(100vh - 107px);
+		/* min-height:calc(100vh - 107px); */
 		position: fixed;
 		z-index: 1;
 	}
