fixed 3 more issues

--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -137,6 +137,7 @@
 	}
 
 	.parentPartnerLogoSmall {
+		min-width: 50px !important;
 		max-width: inherit !important;
 	}
 	.mainArea .partnerMenu {
