--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -588,6 +588,7 @@ md-event-calendar {
 .partnerMenu {
 	border: 1px solid #e7ecf1;
 	margin: 30px;
+	margin-right: 0px;
 	cursor: pointer;
 	margin-bottom: 0px;
 	outline: none;
