--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -374,6 +374,7 @@ md-event-calendar {
 		cursor: pointer;
 		text-align: center;
 		min-height: 25px;
+		width: 100px;
 	}
 }
 .appointment.active {
