fixed bug close #28

--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -170,7 +170,8 @@ kyc-form form, profile-form form{
         width: 205px;
         border-radius: 3px;
         border: 1px solid #e7ecf1;
-        padding: 15px;
+        padding: 10px;
+        padding-left: 15px;
         font-size: 14px;
         color: #4f6379;
         &.error {
