--- a/src/app/components/main/dashboard/dashboard.responsive.scss
+++ b/src/app/components/main/dashboard/dashboard.responsive.scss
@@ -166,8 +166,10 @@
         }
 .brokerage {
     display: flex;
-    margin: 40px;
     flex-grow: 1;
+    margin-right: 0;
+    margin-left: 10px;
+    min-height: 300px;
     margin-top: 0px;
     flex-flow: column;
     .brokerage-container {
