--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -197,6 +197,7 @@
             display: flex;
             padding-bottom: 40px;
             margin: 40px;
+            margin-bottom: 0;
             margin-top: 20px;
             border-bottom: 2px solid rgba(231,236,241,0.3);
             flex-flow: column;
