--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -5,6 +5,7 @@
 		display: flex;
 		flex-flow: column;
 		padding: 40px;
+		padding-bottom: 0;
 		padding-top: 10px;
 		flex-grow: 1;
 		.navigation {
@@ -50,11 +51,11 @@
 			}
 		}
 		.inbox,.sent {
-			max-height: 560px;
-			min-height: 525px;
-			max-width: 700px;
-			padding-right: 20px;
-			overflow: auto;
+			max-height: calc(100vh - 250px);
+		    margin-bottom: 20px;
+		    max-width: 700px;
+		    padding-right: 20px;
+		    overflow: auto;
 			.message {
 				display: flex;
 				outline:none;
@@ -106,7 +107,7 @@
 	.right {
 		display: flex;
 		flex-flow: column;
-		width: 576px;
+		width: 40%;
 		background: #f2f6f8;
 		padding: 30px;
 		position: relative;
@@ -120,8 +121,8 @@
 		}
 		img.compose-attach {
 			position: absolute;
-		    bottom: 10px;
-		    right: 140px;
+ 			bottom: 20px;
+    		right: 165px;
 		    height: 20px;
 		    cursor: pointer;
 		}
@@ -152,9 +153,6 @@
 			top:72px;
 			left: 12px;
 			font-size: 14px;
-		}
-		&.send {
-			justify-content: space-between;
 		}
 		&.composing {
 			padding: 0;
@@ -229,6 +227,10 @@
 		}
 		.reply {
 			display: flex;
+			position: absolute;
+		    left: 20px;
+		    right: 20px;
+		    bottom: 20px;
 		}
 		.send-btn{
 			height: 60px;
