Fix for firefox

--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -5,7 +5,7 @@
 		 <md-input-container md-no-float class="md-block">
           <input ng-if="vm.showSearch" style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
         </md-input-container>
-		<img ng-click="vm.showSearch = !vm.showSearch" src="/assets/images/search.png" style="height:44px; width"17px;padding: 0 13px;cursor: pointer;z-index: 1;cursor: pointer;outline: none;">
+		<img ng-click="vm.showSearch = !vm.showSearch" src="/assets/images/search.png" style="height:17px; width:44px;padding: 0 13px;cursor: pointer;z-index: 1;cursor: pointer;outline: none;">
 		<div class="flag-dropdown">
 			<img ng-src="{{vm.activeFlag.url}}" style="padding: 0 13px; height: 32px;height:32px; width: 74px;">
 			<div style="font-size: 14px;">{{vm.activeFlag.country}}</div>		
