Fix for firefox progress chart

--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -255,3 +255,7 @@ kyc-form form, profile-form form{
   background-color: darkgrey;
   outline: 1px solid slategrey;
 }
+
+path.progress {
+  filter: unset;
+}
