--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -58,6 +58,7 @@
 			position: relative;
 			height: 700px;
 			width:800px;
+			max-height: 90vh;
 			margin-top: 30px;
 			background-color: #fff;
 			border-radius: 3px;
@@ -122,6 +123,7 @@
 					flex-flow: row wrap;
 					align-content: flex-start;
 				    padding: 10px;
+				    max-height: calc(90vh - 185px);
 				}
 			}
 			.bottom {
