--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -69,6 +69,16 @@
 				border-left: 5px solid #3498db;
 				padding-bottom: 10px;
 				max-width: 800px;
+				position: relative;
+				&>.status {
+					height: 8px;
+				    width: 8px;
+				    border-radius: 25px;
+				    background-color: #3aafa5;
+				    position: absolute;
+				    top: 6px;
+				    right: 4px;
+				}
 				.detail {
 					flex-grow: 1;
 				}
