--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -12,7 +12,7 @@
 		<span ng-if="vm.isBroker" class="upload">Document not uploaded.</span>
 		<span ng-if="!vm.isBroker" class="upload mo-hide">
 			Drag and drop your file here or 
-			<md-button ngf-select="vm.upload($file, vm.document)" class="md-primary md-raised"
+			<md-button ngf-select="vm.startUpload($file, vm.document)" class="md-primary md-raised"
 					   style="background-color: #3598DB;min-width:0;width:63px;font-size:12px;">	Upload
 			</md-button>
 			<md-button class="md-secondary md-raised" ng-if="vm.document.replaceAction" 
