Fixing photo in OCR preview

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -20,7 +20,8 @@
 							<label>
 								{{field.name}}
 							</label>
-							<input disabled type="text" ng-model="field.value">
+							<input disabled type="text" ng-model="field.value" ng-if="field.name!='Photo'">
+							<img ng-src="{{field.value}}" ng-if="field.name=='Photo'">
 						</div>
 					</div>
 				</div>
