--- a/src/app/components/main/kyc-form/kycform.html
+++ b/src/app/components/main/kyc-form/kycform.html
@@ -15,6 +15,13 @@
 				</label>
 				<input disabled name="kyc-{{field.questionId}}" type="text" ng-model="field.answerDesc">
 			</div>
+				<div class="input" ng-switch-when="TEXTAREA">
+				<label for="kyc-{{field.questionId}}">
+					{{field.questionDesc}}
+					<span ng-if="field.requireField==='REQUIRED'">*</span>
+				</label>
+				<textarea disabled name="kyc-{{field.questionId}}" ng-model="field.displayAnswerText"></textarea>
+			</div>
 			<div class="input" ng-switch-default>
 				<label for="kyc-{{field.questionId}}">
 					{{field.questionDesc}}
@@ -62,6 +69,14 @@
 					</label>			
 				</div>
 				<div ng-if="field.error" class="error">{{field.error}}</div>		
+			</div>
+			<div class="input" ng-switch-when="TEXTAREA">
+				<label for="kyc-{{field.questionId}}">
+					{{field.questionDesc}}
+					<span ng-if="field.requireField==='REQUIRED'">*</span>
+				</label>
+				<textarea ng-class="{error:field.error}" ng-disabled="vm.isBroker" name="kyc-{{field.questionId}}" ng-model="field.answerText" ng-required="field.requireField==='REQUIRED'"></textarea>
+				<div ng-if="field.error" class="error">{{field.error}}</div>
 			</div>
 			<div class="input" ng-switch-default>
 				<label for="kyc-{{field.questionId}}">
